src/antlr-generated/javascript/interpreterParser.js
// Generated from interpreter.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "interpreter.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "'['", "']'", "':'", "'+'", null, 
                     "'*'", null, "','", "'{'", "'}'", null, "'\"'", "'TO'" ];

var symbolicNames = [ null, "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", 
                      "PLUS", "MINUS", "STAR", "QMARK", "COMMA", "LCURLY", 
                      "RCURLY", "TILDE", "DQUOTE", "TO", "AND", "OR", "NOT", 
                      "NEAR", "ONEAR", "KEYWORD_LIST", "WS", "NUMBER", "DATE_TOKEN", 
                      "TERM_NORMAL", "TERM_WILDCARD", "PHRASE", "PHRASE_ANYTHING", 
                      "OPERATOR", "ATOM", "MODIFIER", "TMODIFIER", "CLAUSE", 
                      "FIELD", "FUZZY", "BOOST", "QNORMAL", "QPHRASE", "QPHRASETRUNC", 
                      "QTRUNCATED", "QRANGEIN", "QRANGEEX", "QANYTHING", 
                      "QDATE" ];

var ruleNames =  [ "mainQ", "clauseDefault", "clauseOr", "clauseAnd", "clauseNot", 
                   "clauseNear", "clauseONear", "clauseBasic", "atom", "field", 
                   "value", "anything", "two_sided_range_term", "range_term", 
                   "range_value", "multi_value", "keyword_list", "normal", 
                   "wildcard", "quoted_truncated", "quoted", "modifier", 
                   "term_modifier", "proximity", "not_", "and_", "or_", 
                   "near_", "onear_", "date", "sep" ];

function interpreterParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

interpreterParser.prototype = Object.create(antlr4.Parser.prototype);
interpreterParser.prototype.constructor = interpreterParser;

Object.defineProperty(interpreterParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

interpreterParser.EOF = antlr4.Token.EOF;
interpreterParser.LPAREN = 1;
interpreterParser.RPAREN = 2;
interpreterParser.LBRACK = 3;
interpreterParser.RBRACK = 4;
interpreterParser.COLON = 5;
interpreterParser.PLUS = 6;
interpreterParser.MINUS = 7;
interpreterParser.STAR = 8;
interpreterParser.QMARK = 9;
interpreterParser.COMMA = 10;
interpreterParser.LCURLY = 11;
interpreterParser.RCURLY = 12;
interpreterParser.TILDE = 13;
interpreterParser.DQUOTE = 14;
interpreterParser.TO = 15;
interpreterParser.AND = 16;
interpreterParser.OR = 17;
interpreterParser.NOT = 18;
interpreterParser.NEAR = 19;
interpreterParser.ONEAR = 20;
interpreterParser.KEYWORD_LIST = 21;
interpreterParser.WS = 22;
interpreterParser.NUMBER = 23;
interpreterParser.DATE_TOKEN = 24;
interpreterParser.TERM_NORMAL = 25;
interpreterParser.TERM_WILDCARD = 26;
interpreterParser.PHRASE = 27;
interpreterParser.PHRASE_ANYTHING = 28;
interpreterParser.OPERATOR = 29;
interpreterParser.ATOM = 30;
interpreterParser.MODIFIER = 31;
interpreterParser.TMODIFIER = 32;
interpreterParser.CLAUSE = 33;
interpreterParser.FIELD = 34;
interpreterParser.FUZZY = 35;
interpreterParser.BOOST = 36;
interpreterParser.QNORMAL = 37;
interpreterParser.QPHRASE = 38;
interpreterParser.QPHRASETRUNC = 39;
interpreterParser.QTRUNCATED = 40;
interpreterParser.QRANGEIN = 41;
interpreterParser.QRANGEEX = 42;
interpreterParser.QANYTHING = 43;
interpreterParser.QDATE = 44;

interpreterParser.RULE_mainQ = 0;
interpreterParser.RULE_clauseDefault = 1;
interpreterParser.RULE_clauseOr = 2;
interpreterParser.RULE_clauseAnd = 3;
interpreterParser.RULE_clauseNot = 4;
interpreterParser.RULE_clauseNear = 5;
interpreterParser.RULE_clauseONear = 6;
interpreterParser.RULE_clauseBasic = 7;
interpreterParser.RULE_atom = 8;
interpreterParser.RULE_field = 9;
interpreterParser.RULE_value = 10;
interpreterParser.RULE_anything = 11;
interpreterParser.RULE_two_sided_range_term = 12;
interpreterParser.RULE_range_term = 13;
interpreterParser.RULE_range_value = 14;
interpreterParser.RULE_multi_value = 15;
interpreterParser.RULE_keyword_list = 16;
interpreterParser.RULE_normal = 17;
interpreterParser.RULE_wildcard = 18;
interpreterParser.RULE_quoted_truncated = 19;
interpreterParser.RULE_quoted = 20;
interpreterParser.RULE_modifier = 21;
interpreterParser.RULE_term_modifier = 22;
interpreterParser.RULE_proximity = 23;
interpreterParser.RULE_not_ = 24;
interpreterParser.RULE_and_ = 25;
interpreterParser.RULE_or_ = 26;
interpreterParser.RULE_near_ = 27;
interpreterParser.RULE_onear_ = 28;
interpreterParser.RULE_date = 29;
interpreterParser.RULE_sep = 30;


function MainQContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_mainQ;
    this.clause = null; // ClauseDefaultContext
    return this;
}

MainQContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MainQContext.prototype.constructor = MainQContext;

MainQContext.prototype.EOF = function() {
    return this.getToken(interpreterParser.EOF, 0);
};

MainQContext.prototype.clauseDefault = function() {
    return this.getTypedRuleContext(ClauseDefaultContext,0);
};

MainQContext.prototype.sep = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SepContext);
    } else {
        return this.getTypedRuleContext(SepContext,i);
    }
};




interpreterParser.MainQContext = MainQContext;

interpreterParser.prototype.mainQ = function() {

    var localctx = new MainQContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, interpreterParser.RULE_mainQ);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        if(la_===1) {
            this.state = 62;
            this.sep();

        }
        this.state = 65;
        localctx.clause = this.clauseDefault();
        this.state = 67;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===interpreterParser.WS) {
            this.state = 66;
            this.sep();
        }

        this.state = 69;
        this.match(interpreterParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseDefaultContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseDefault;
    return this;
}

ClauseDefaultContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseDefaultContext.prototype.constructor = ClauseDefaultContext;

ClauseDefaultContext.prototype.clauseOr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseOrContext);
    } else {
        return this.getTypedRuleContext(ClauseOrContext,i);
    }
};

ClauseDefaultContext.prototype.sep = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SepContext);
    } else {
        return this.getTypedRuleContext(SepContext,i);
    }
};




interpreterParser.ClauseDefaultContext = ClauseDefaultContext;

interpreterParser.prototype.clauseDefault = function() {

    var localctx = new ClauseDefaultContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, interpreterParser.RULE_clauseDefault);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this.clauseOr();
        this.state = 78;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 73;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                if(la_===1) {
                    this.state = 72;
                    this.sep();

                }
                this.state = 75;
                this.clauseOr(); 
            }
            this.state = 80;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseOrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseOr;
    return this;
}

ClauseOrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseOrContext.prototype.constructor = ClauseOrContext;

ClauseOrContext.prototype.clauseAnd = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseAndContext);
    } else {
        return this.getTypedRuleContext(ClauseAndContext,i);
    }
};

ClauseOrContext.prototype.or_ = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Or_Context);
    } else {
        return this.getTypedRuleContext(Or_Context,i);
    }
};




interpreterParser.ClauseOrContext = ClauseOrContext;

interpreterParser.prototype.clauseOr = function() {

    var localctx = new ClauseOrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, interpreterParser.RULE_clauseOr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.clauseAnd();
        this.state = 87;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 82;
                this.or_();
                this.state = 83;
                this.clauseAnd(); 
            }
            this.state = 89;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseAndContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseAnd;
    return this;
}

ClauseAndContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseAndContext.prototype.constructor = ClauseAndContext;

ClauseAndContext.prototype.clauseNot = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseNotContext);
    } else {
        return this.getTypedRuleContext(ClauseNotContext,i);
    }
};

ClauseAndContext.prototype.and_ = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(And_Context);
    } else {
        return this.getTypedRuleContext(And_Context,i);
    }
};




interpreterParser.ClauseAndContext = ClauseAndContext;

interpreterParser.prototype.clauseAnd = function() {

    var localctx = new ClauseAndContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, interpreterParser.RULE_clauseAnd);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.clauseNot();
        this.state = 96;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 91;
                this.and_();
                this.state = 92;
                this.clauseNot(); 
            }
            this.state = 98;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseNotContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseNot;
    return this;
}

ClauseNotContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseNotContext.prototype.constructor = ClauseNotContext;

ClauseNotContext.prototype.clauseNear = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseNearContext);
    } else {
        return this.getTypedRuleContext(ClauseNearContext,i);
    }
};

ClauseNotContext.prototype.not_ = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Not_Context);
    } else {
        return this.getTypedRuleContext(Not_Context,i);
    }
};




interpreterParser.ClauseNotContext = ClauseNotContext;

interpreterParser.prototype.clauseNot = function() {

    var localctx = new ClauseNotContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, interpreterParser.RULE_clauseNot);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.clauseNear();
        this.state = 105;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 100;
                this.not_();
                this.state = 101;
                this.clauseNear(); 
            }
            this.state = 107;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseNearContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseNear;
    return this;
}

ClauseNearContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseNearContext.prototype.constructor = ClauseNearContext;

ClauseNearContext.prototype.clauseONear = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseONearContext);
    } else {
        return this.getTypedRuleContext(ClauseONearContext,i);
    }
};

ClauseNearContext.prototype.near_ = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Near_Context);
    } else {
        return this.getTypedRuleContext(Near_Context,i);
    }
};




interpreterParser.ClauseNearContext = ClauseNearContext;

interpreterParser.prototype.clauseNear = function() {

    var localctx = new ClauseNearContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, interpreterParser.RULE_clauseNear);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.clauseONear();
        this.state = 114;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 109;
                this.near_();
                this.state = 110;
                this.clauseONear(); 
            }
            this.state = 116;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseONearContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseONear;
    return this;
}

ClauseONearContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseONearContext.prototype.constructor = ClauseONearContext;

ClauseONearContext.prototype.clauseBasic = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClauseBasicContext);
    } else {
        return this.getTypedRuleContext(ClauseBasicContext,i);
    }
};

ClauseONearContext.prototype.onear_ = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Onear_Context);
    } else {
        return this.getTypedRuleContext(Onear_Context,i);
    }
};




interpreterParser.ClauseONearContext = ClauseONearContext;

interpreterParser.prototype.clauseONear = function() {

    var localctx = new ClauseONearContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, interpreterParser.RULE_clauseONear);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.clauseBasic();
        this.state = 123;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 118;
                this.onear_();
                this.state = 119;
                this.clauseBasic(); 
            }
            this.state = 125;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClauseBasicContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_clauseBasic;
    return this;
}

ClauseBasicContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClauseBasicContext.prototype.constructor = ClauseBasicContext;

ClauseBasicContext.prototype.LPAREN = function() {
    return this.getToken(interpreterParser.LPAREN, 0);
};

ClauseBasicContext.prototype.clauseDefault = function() {
    return this.getTypedRuleContext(ClauseDefaultContext,0);
};

ClauseBasicContext.prototype.RPAREN = function() {
    return this.getToken(interpreterParser.RPAREN, 0);
};

ClauseBasicContext.prototype.sep = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SepContext);
    } else {
        return this.getTypedRuleContext(SepContext,i);
    }
};

ClauseBasicContext.prototype.term_modifier = function() {
    return this.getTypedRuleContext(Term_modifierContext,0);
};

ClauseBasicContext.prototype.or_ = function() {
    return this.getTypedRuleContext(Or_Context,0);
};

ClauseBasicContext.prototype.and_ = function() {
    return this.getTypedRuleContext(And_Context,0);
};

ClauseBasicContext.prototype.not_ = function() {
    return this.getTypedRuleContext(Not_Context,0);
};

ClauseBasicContext.prototype.atom = function() {
    return this.getTypedRuleContext(AtomContext,0);
};




interpreterParser.ClauseBasicContext = ClauseBasicContext;

interpreterParser.prototype.clauseBasic = function() {

    var localctx = new ClauseBasicContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, interpreterParser.RULE_clauseBasic);
    var _la = 0; // Token type
    try {
        this.state = 152;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 127;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
            if(la_===1) {
                this.state = 126;
                this.sep();

            }
            this.state = 137;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << interpreterParser.AND) | (1 << interpreterParser.OR) | (1 << interpreterParser.NOT) | (1 << interpreterParser.WS))) !== 0)) {
                this.state = 132;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 129;
                    this.or_();
                    break;

                case 2:
                    this.state = 130;
                    this.and_();
                    break;

                case 3:
                    this.state = 131;
                    this.not_();
                    break;

                }
                this.state = 135;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===interpreterParser.WS) {
                    this.state = 134;
                    this.sep();
                }

            }

            this.state = 139;
            this.match(interpreterParser.LPAREN);
            this.state = 140;
            this.clauseDefault();
            this.state = 142;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===interpreterParser.WS) {
                this.state = 141;
                this.sep();
            }

            this.state = 144;
            this.match(interpreterParser.RPAREN);
            this.state = 146;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
            if(la_===1) {
                this.state = 145;
                this.term_modifier();

            }
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 149;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===interpreterParser.WS) {
                this.state = 148;
                this.sep();
            }

            this.state = 151;
            this.atom();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AtomContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_atom;
    return this;
}

AtomContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AtomContext.prototype.constructor = AtomContext;

AtomContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

AtomContext.prototype.multi_value = function() {
    return this.getTypedRuleContext(Multi_valueContext,0);
};

AtomContext.prototype.term_modifier = function() {
    return this.getTypedRuleContext(Term_modifierContext,0);
};

AtomContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};




interpreterParser.AtomContext = AtomContext;

interpreterParser.prototype.atom = function() {

    var localctx = new AtomContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, interpreterParser.RULE_atom);
    try {
        this.state = 166;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 154;
            this.field();
            this.state = 155;
            this.multi_value();
            this.state = 157;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
            if(la_===1) {
                this.state = 156;
                this.term_modifier();

            }
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 160;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
            if(la_===1) {
                this.state = 159;
                this.field();

            }
            this.state = 162;
            this.value();
            this.state = 164;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
            if(la_===1) {
                this.state = 163;
                this.term_modifier();

            }
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FieldContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = interpreterParser.RULE_field;
    return this;
}

FieldContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldContext.prototype.constructor = FieldContext;

FieldContext.prototype.TERM_NORMAL = function() {
    return this.getToken(interpreterParser.TERM_NORMAL, 0);
};

FieldContext.prototype.COLON = function() {
    return this.getToken(interpreterParser.COLON, 0);
};

FieldContext.prototype.sep = function() {
    return this.getTypedRuleContext(SepContext,0);
};




interpreterParser.FieldContext = FieldContext;

interpreterParser.prototype.field = function() {
